--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "@nx-nextjs-flowbite/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "dev": "nx run-many --target=dev --all=true"
+  },
   "private": true,
   "dependencies": {
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.8.0",
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
